--- a/MoviesFrontend/movies_Client/src/index.css
+++ b/MoviesFrontend/movies_Client/src/index.css
@@ -1,68 +1,398 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
+  font-family: sans-serif;
+  background-color:rgba(0, 0, 0, 0.875)
+ 
+}
+
+header {
+  background-color: rgb(61, 61, 61);
+  height: 100px;
+  width: 100%;
+
+}
+.main{
+  background: slider;
+}
+.main-excursion{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin-top: 35px;
+  flex-direction: column;
+  align-items: baseline;
+  padding-bottom: 20px;
+  padding-left: 10%;
+}
+.main-excursion img{
+  width: 50%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 992px;
+  margin: auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.nav a{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+
+}
+.nav ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  
 }
 
-button {
+.nav-menu{
+  display: flex;
+  list-style: none;
+
+}
+
+.nav-menu-item{
+  display: flex;
+  font-size: 18px;
+  margin: 10px;
+  width: max-content;
+  height: max-content;
+}
+.menu-link:hover{
+  transition: 0.8s;
+  box-shadow: 0 12px 16px rgb(0, 0, 0);
+  border-radius: 10px;
+}
+.slider{
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+}
+.slider ul{
+  display: flex;
+  padding-left: 20%;
+  width: 500%;
+  animation: cambio 20s infinite alternate;
+  animation-timing-function: ease-in;
+}
+.slider li{
+  width: 100%;
+  list-style: none;
+}
+.slider img{
+  width: 60%;
+  
+}
+.intro-index li{
+  padding-top: 30px;
+}
+@keyframes cambio {
+  0% {margin-left: 0;}
+  20%{margin-left: 0;}
+
+  25%{margin-left: -100%;}
+  45%{margin-left: -100%;}
+  
+  50%{margin-left: -200%;}
+  70%{margin-left: -200%;}
+  
+  75%{margin-left: -300%;}
+  100%{margin-left: -300%;}
+}
+.intro-index{
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  border-radius: 40px;
+  margin: auto;
+  height: 100;
+  width: 60%;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+br{
+  padding-left: 40%;
+}
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 35px;
+}
+main h1{
+  display: flex;
+  align-items: flex-start;
+  font-size: 40px;
+
+}
+.intro-index{
+  display: flex;
+
+}
+.intro-index p{
+  margin: 30px;
+  padding-bottom: 30px;
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+  
+}
+.intro-index-excursion{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(133, 53, 53);
+  border-radius: 40px;
+  margin: 5px;
+  height: 100%;
+  width: 60%;
+}
+.intro-index-excursion h3{
+  margin: 30px;
+  padding-bottom: 3px;
+  font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+}
+
+
+.intro-index-excursion li{
+  list-style: none;
+  padding-left: 30px;
+  padding-bottom: 5%;
+}
+iframe{
+  padding-left: 10%;
+
+}
+.intro-index-excursion p{
+  margin: 30px;
+  padding-bottom: 30px;
+  font-size: 25px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+}
+.intro-index-excursion img{
+  display: flex;
+  height: 200px;
+  width: 100%;
+}
+.intro-index ul{
+  font-size: 30px;
+}
+.intro-index li{
+  font-size: 25px;
+  color: rgb(84, 144, 146);
+  list-style-type: none;
+  padding-left: 1%;
+  padding-top: 5px;
+}
+
+
+
+
+.flex-contenedor-div{
+
+  width: 100%;
+  
+  max-width: 1200px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding-top: 250px;
+  height: 350px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+}
+.flex-contenedor-div .card{
+  width: 200px;
+  height: 300px;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  transition: all 0.25s;
+  background-color: rgba(255, 255, 255, 0.781);
+}
+.flex-contenedor-div .card:hover{
+  transform: translateY(-15px);
+  box-shadow: 0 12px 16px rgb(0, 0, 0);
+}
+.flex-contenedor-div img{
+  max-height: 100%;
+  max-width: 100%;
+  
+}
+.flex-contenedor-div .card h3{
+  font-weight: 600;
+  font-size: 30px;
+  height: 1px;
+
+}
+.flex-contenedor-div .card p{
+  padding: 0 1rem;
+  font-size: 20px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 300;
+  padding-top: 30px;
+  text-align: center;
+}
+.flex-contenedor-div .card a{
+  padding-top: 30px;
+  font-size: 22px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+
+
+
+.nav .logo{
+  width: 130px;
+  height: 100px;
+}
+.nav-toggle{
+  color:white;
+  background: none;
+  border: none;
+  font-size: 30px;
+  padding: 0 20px;
+  line-height: 60px;
+  display: none;
+
+
+}
+.caja-quienes{
+  width: 100px;
+  height: 100px;
+  display: flex;
+  
+  background-color: rgb(243, 242, 241);
+  border-radius: 30px;
+}
+
+
+
+
+.pie{
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+.pie li{
+  padding-top: 10px;
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+.reserva{
+  margin: 100px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
+.reserva div{
+  padding-top: 20px;
+  font-size: 20px;
+}
+.wpp{
+  padding-left: 22%
+}
+.wpp img{
+  width: 10%;
+  height: 100%;
+  
+}
+
+
+
+
+
+
+
+
+@media (max-width: 768px){
+body{
+  padding-top: 70px;
+}
+.header {
+  height: 100%;
+  width: 100%;
+}
+.nav{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+}
+
+.nav ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.intro-index{
+  width: 100%;
+  
+}
+.intro-index p{
+  font-size: 20px;
+}
+.flex-contenedor-div{
+  height: 10%;
+  width: 100%;
+}
+.intro-index-excursion{
+  width: 100%;
+  padding-left: 0%;
+  
+}
+.intro-index li{
+  padding-top: 30px;
+}
+.main-excursion{
+  padding-left: 0%;
+}
+.main-excursion img{
+  width: 90%;
+  padding-left: 0%;
+}
+.slider{
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+}
+.slider ul{
+  display: flex;
+  padding-left: 0%;
+  width: 500%;
+  animation: cambio 20s infinite alternate;
+  animation-timing-function: ease-in;
+}
+.slider li{
+  width: 100%;
+  list-style: none;
+}
+.slider img{
+  width: 100%;
+
+}
+iframe{
+  padding-left: 0%;
+  width: 100%;
+}
+.wpp{
+  width: 100%;
+  height: 100%;
+  padding-left: 0%;
+}   
 }
