color precios para diferenciar

--- a/MoviesFrontend/movies_Client/src/index.css
+++ b/MoviesFrontend/movies_Client/src/index.css
@@ -238,7 +238,7 @@ iframe{
 }
 .precio {
   font-size: 18px;
-  color: #ffffff;
+  color: #97ffae;
   margin-top: 10px; /* Espaciado entre "Comprar" y el precio */
 }
 
