--- a/MoviesFrontend/movies_Client/src/index.css
+++ b/MoviesFrontend/movies_Client/src/index.css
@@ -1,324 +1,4 @@
 body {
-  font-family: sans-serif;
-  background-color:rgba(0, 0, 0, 0.875)
- 
+    margin: 0;
+    background-color: #1f1f1f;
 }
-
-header {
-  background-color: rgb(61, 61, 61);
-  height: 100px;
-  width: 100%;
-
-}
-.main{
-  background: slider;
-}
-.main-excursion{
-  display: flex;
-  margin-top: 35px;
-  flex-direction: column;
-  align-items: baseline;
-  padding-bottom: 20px;
-  padding-left: 10%;
-}
-.main-excursion img{
-  width: 50%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  
-}
-.nav {
-  display: flex;
-  justify-content: space-between;
-  max-width: 992px;
-  margin: auto;
-}
-
-
-.nav a{
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-
-}
-.nav ul{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  
-}
-
-.nav-menu{
-  display: flex;
-  list-style: none;
-
-}
-
-.nav-menu-item{
-  display: flex;
-  font-size: 18px;
-  margin: 10px;
-  width: max-content;
-  height: max-content;
-}
-.menu-link:hover{
-  transition: 0.8s;
-  box-shadow: 0 12px 16px rgb(0, 0, 0);
-  border-radius: 10px;
-}
-.slider{
-  width: 95%;
-  margin: auto;
-  overflow: hidden;
-}
-.slider ul{
-  display: flex;
-  padding-left: 20%;
-  width: 500%;
-  animation: cambio 20s infinite alternate;
-  animation-timing-function: ease-in;
-}
-.slider li{
-  width: 100%;
-  list-style: none;
-}
-.slider img{
-  width: 60%;
-  
-}
-.intro-index li{
-  padding-top: 30px;
-}
-@keyframes cambio {
-  0% {margin-left: 0;}
-  20%{margin-left: 0;}
-
-  25%{margin-left: -100%;}
-  45%{margin-left: -100%;}
-  
-  50%{margin-left: -200%;}
-  70%{margin-left: -200%;}
-  
-  75%{margin-left: -300%;}
-  100%{margin-left: -300%;}
-}
-.intro-index{
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  border-radius: 40px;
-  margin: auto;
-  height: 100;
-  width: 60%;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: baseline;
-}
-br{
-  padding-left: 40%;
-}
-main{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 35px;
-}
-main h1{
-  display: flex;
-  align-items: flex-start;
-  font-size: 40px;
-
-}
-.intro-index{
-  display: flex;
-
-}
-.intro-index p{
-  margin: 30px;
-  padding-bottom: 30px;
-  font-size: 30px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  letter-spacing: 1px;
-  word-spacing: 5px;
-  
-}
-.intro-index-excursion{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(133, 53, 53);
-  border-radius: 40px;
-  margin: 5px;
-  height: 100%;
-  width: 60%;
-}
-.intro-index-excursion h3{
-  margin: 30px;
-  padding-bottom: 3px;
-  font-size: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  letter-spacing: 1px;
-  word-spacing: 5px;
-}
-
-
-.intro-index-excursion li{
-  list-style: none;
-  padding-left: 30px;
-  padding-bottom: 5%;
-}
-iframe{
-  padding-left: 10%;
-
-}
-.intro-index-excursion p{
-  margin: 30px;
-  padding-bottom: 30px;
-  font-size: 25px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  letter-spacing: 1px;
-  word-spacing: 5px;
-}
-.intro-index-excursion img{
-  display: flex;
-  height: 200px;
-  width: 100%;
-}
-.intro-index ul{
-  font-size: 30px;
-}
-.intro-index li{
-  font-size: 25px;
-  color: rgb(84, 144, 146);
-  list-style-type: none;
-  padding-left: 1%;
-  padding-top: 5px;
-}
-
-
-
-
-.flex-contenedor-div{
-
-  width: 100%;
-  
-  max-width: 1200px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 250px;
-  height: 350px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: auto;
-}
-.flex-contenedor-div .card{
-  width: 200px;
-  height: 300px;
-  border-radius: 8px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  margin: 20px;
-  text-align: center;
-  transition: all 0.25s;
-  background-color: rgba(255, 255, 255, 0.781);
-}
-.flex-contenedor-div .card:hover{
-  transform: translateY(-15px);
-  box-shadow: 0 12px 16px rgb(0, 0, 0);
-}
-.card-contenedor {
-  text-align: center;
-  position: relative;
-}
-.card img{
-  max-height: 100%;
-  max-width: 100%;
-  }
-.card-contenedor h3{
-  color: #ffffff;
-  align-items: center;
-}
-.precio {
-  font-size: 18px;
-  color: #97ffae;
-  margin-top: 10px; /* Espaciado entre "Comprar" y el precio */
-}
-
-
-
-
-
-.nav .logo{
-  width: 130px;
-  height: 100px;
-}
-.nav-toggle{
-  color:white;
-  background: none;
-  border: none;
-  font-size: 30px;
-  padding: 0 20px;
-  line-height: 60px;
-  display: none;
-
-
-}
-.caja-quienes{
-  width: 100px;
-  height: 100px;
-  display: flex;
-  
-  background-color: rgb(243, 242, 241);
-  border-radius: 30px;
-}
-
-
-@media (max-width: 768px){
-body{
-  padding-top: 70px;
-}
-.header {
-  height: 100%;
-  width: 100%;
-}
-.nav{
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-
-}
-
-.nav ul{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.intro-index{
-  width: 100%;
-  
-}
-.intro-index p{
-  font-size: 20px;
-}
-.flex-contenedor-div{
-  height: 10%;
-  width: 100%;
-}
-.intro-index-excursion{
-  width: 100%;
-  padding-left: 0%;
-  
-}
-.intro-index li{
-  padding-top: 30px;
-}
-}
-iframe{
-  padding-left: 0%;
-  width: 100%;
-}
-.wpp{
-  width: 100%;
-  height: 100%;
-  padding-left: 0%;
-}   
-
