--- a/MoviesFrontend/movies_Client/src/Components/movie.css
+++ b/MoviesFrontend/movies_Client/src/Components/movie.css
@@ -1,32 +1,96 @@
-.movie-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 300px));
-    gap: 20px;
-    justify-content: center;
-    padding: 20px;
-}
 
-.movie-card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: center;
-    background-color: #fff;
+.movie-list {
     width: 100%;
-    box-sizing: border-box;
-    transition: transform 0.3s ease;
+    max-width: 1200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 350px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
 }
+.movie-card {
+    width: 200px;
+    height: 300px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: rgba(0, 0, 0, 0.781);
+  }
 
 .movie-card:hover {
-    transform: scale(1.05);
+    width: 200px;
+    height: 300px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: rgba(255, 255, 255, 0.781);
 }
 
 .movie-poster {
-    width: 100%;
-    height: auto;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .movie-info {
     padding: 10px;
 }
+.movie-info p{
+    color: #97ffae;
+}
+
+
+.flex-contenedor-div{
+
+    width: 100%;
+    max-width: 1200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 250px;
+    height: 350px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+  }
+  .flex-contenedor-div .card{
+    width: 200px;
+    height: 300px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: rgba(255, 255, 255, 0.781);
+  }
+  .flex-contenedor-div .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgb(0, 0, 0);
+  }
+  .card-contenedor {
+    text-align: center;
+    position: relative;
+  }
+  .card img{
+    max-height: 100%;
+    max-width: 100%;
+    }
+  .card-contenedor h3{
+    color: #ffffff;
+    align-items: center;
+  }
+  .precio {
+    font-size: 18px;
+    color: #97ffae;
+    margin-top: 10px; /* Espaciado entre "Comprar" y el precio */
+  }
+  
+  
