--- a/MoviesFrontend/movies_Client/src/Components/movie.css
+++ b/MoviesFrontend/movies_Client/src/Components/movie.css
@@ -3,7 +3,7 @@
     width: 100%;
     max-width: 1200px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    height: 350px;
+    height: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -11,10 +11,10 @@
     margin: auto;
 }
 .movie-card {
-    width: 200px;
-    height: 300px;
+    width: 12em;
+    height: 18em;
     border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 20px;
     text-align: center;
@@ -23,15 +23,13 @@
   }
 
 .movie-card:hover {
-    width: 200px;
-    height: 300px;
+    transform: scale(1.03);
     border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     margin: 20px;
     text-align: center;
     transition: all 0.25s;
-    background-color: rgba(255, 255, 255, 0.781);
 }
 
 .movie-poster {
@@ -42,13 +40,11 @@
 .movie-info {
     padding: 10px;
 }
-.movie-info p{
-    color: #97ffae;
+.movie-info b{
+    color: #06751e;
 }
 
-
 .flex-contenedor-div{
-
     width: 100%;
     max-width: 1200px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -92,5 +88,3 @@
     color: #97ffae;
     margin-top: 10px; /* Espaciado entre "Comprar" y el precio */
   }
-  
-  
