--- a/MoviesFrontend/movies_Client/src/Components/movie.css
+++ b/MoviesFrontend/movies_Client/src/Components/movie.css
@@ -7,9 +7,14 @@
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: auto;
     padding: 5rem;
+}
+.contenedor-flex{
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
 .movie-card {
     width: 12em;
@@ -39,7 +44,7 @@
 }
 
 .movie-info {
-    padding: 10px;
+  
 }
 .movie-info b{
     color: #06751e;
