Register manejo de errores

--- a/MoviesFrontend/movies_Client/src/Components/Login-Register/register-login.css
+++ b/MoviesFrontend/movies_Client/src/Components/Login-Register/register-login.css
@@ -54,4 +54,8 @@
         font-size: 0.8rem;
         color: #ffffff;
     }
+    .error {
+        color: red;
+        margin-top: 10px;
+    }
 }
