--- a/MoviesFrontend/movies_Client/src/Components/MovieList/movie.css
+++ b/MoviesFrontend/movies_Client/src/Components/MovieList/movie.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: baseline;
+  padding-top: 3em;
 }
 .movie-card {
     width: 12em;
@@ -35,7 +36,7 @@
     overflow: hidden;
     margin: 20px;
     text-align: center;
-    transition: all 0.55s;
+    transition: all 0.65s;
 }
 
 .movie-poster {
