--- a/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
@@ -8,14 +8,12 @@
     height: 100%;
     background-size: cover;
     background-position: left center;
-    filter: blur(20px); /* Desenfoque de la imagen */
+    filter: blur(20px) brightness(0.7); /* Desenfoque de la imagen */
+    
     z-index: -1; /* La imagen de fondo queda detrás del contenido */
 }
-
-
-
 .contenedor-general{
-    padding-top: 70px;
+    padding: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -29,7 +27,8 @@
     flex-direction: column;
     align-items: flex-start;
     background-color: rgb(252, 236, 227);
-    border-color: black;
+    border: 1px solid black;
+    box-shadow: 0px 6px 10px rgb(0, 0, 0);
     
 }
 .contenedor-medio img{
@@ -42,10 +41,11 @@
 }
 .contenedor-medio-textos h1{
     font-size: 1.6em;
+    text-align: left;
 }
 
 .contenedor-medio-textos p{
-    color: black;
+    color: rgb(0, 0, 0);
     padding-bottom: 5px;
     text-align: left;
 }
@@ -55,12 +55,16 @@
 
 .contenedor-chico{
     display: flex;
+    padding-left: 100px;
+    width: 100%; 
 }
 .contenedor-chico p{
-    background-color: rgba(95, 95, 95, 0.482);
-    border-radius: 5%;
+    background-color: rgba(255, 204, 165, 0.161);
+    border-radius: 3%;
+    box-shadow: 0px 6px 10px rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     font-size: 30px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-align: left;
     padding: 70px;
 }
