--- a/MoviesFrontend/movies_Client/src/Components/Login-Register/register-login.css
+++ b/MoviesFrontend/movies_Client/src/Components/Login-Register/register-login.css
@@ -1,6 +1,6 @@
 
 .r-container{
-    background-color: #001c63;
+    background-color: #000000cc;
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -35,20 +35,27 @@
             }
         }
         button{
-            padding: 1rem;
-            border: none;
-            background-color: #053348;
-            font-weight: 400;
-            color: rgb(0, 0, 0);
+            background-image: linear-gradient(to right, #ffffff 0%, #ffffff 30%, #000672 100%);
+            background-size: 500% 100%; /* Tamaño del fondo para que la animación funcione */
+            background-position: left center; /* Posición inicial */
+            border: 0.17em transparent;
+            border-radius: 1.1em;
+            width: 200px;
+            height: 45px;
+            color: #000000; /* Color inicial del texto */
+            
+            text-decoration: none;
+            font-size: 1.15em;
             cursor: pointer;
-            font-size: 1rem;
-            border-radius: 0.8rem;
+            transition: background-position 1s ease, color 1s ease; /* Aplica la transición al fondo y al color */
+        }
+        button:hover {
+            background-position: right center;
+            color: #ffffff;
+        }
 
-            &:hover{
-                background-color: #074b6a;
-                color: #ffffff;
-                animation: 3s ease-in linear infinite;
-            }
+        button:active {
+            transform: scale(0.95);
         }
     }
     p{
