--- a/MoviesFrontend/movies_Client/src/Components/SearchBar/searchBar.css
+++ b/MoviesFrontend/movies_Client/src/Components/SearchBar/searchBar.css
@@ -1,7 +1,8 @@
 .search-bar {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 100px;
+    margin-bottom: 280px;
 }
 input {
     width: 50%;
