--- a/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
@@ -2,15 +2,15 @@
 
 .movie-background {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    background-color: #000000;
     background-size: cover;
-    background-position: left center;
-    filter: blur(20px) brightness(0.7); /* Desenfoque de la imagen */
-    
+    background-position: center center;
+    filter: blur(10px) brightness(0.7); /* Desenfoque de la imagen */
     z-index: -1; /* La imagen de fondo queda detrás del contenido */
+    overflow: hidden;
+    border: 1px solid #000000; /* Bordes negros para evitar resplandor de desenfoque */
 }
 .contenedor-general{
     padding: 100px;
