--- a/MoviesFrontend/movies_Client/src/index.css
+++ b/MoviesFrontend/movies_Client/src/index.css
@@ -1,4 +1,18 @@
 body {
     margin: 0;
-    background-color: #ffffff;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://i.pinimg.com/control/564x/da/dc/a4/dadca40d38379fde60e5f8e73754e71a.jpg');
+    background-size: cover;
+    background-position: left center;
+    filter: blur(10px); /* Desenfoque aplicado solo a la imagen de fondo */
+    z-index: -1; /* La imagen de fondo queda detrás del contenido */
 }
