--- a/MoviesFrontend/movies_Client/src/Components/SearchBar/searchBar.css
+++ b/MoviesFrontend/movies_Client/src/Components/SearchBar/searchBar.css
@@ -1,5 +1,6 @@
 .search-bar {
     display: flex;
+    align-items: center;
     justify-content: center;
     margin-top: 100px;
     margin-bottom: 280px;
