--- a/MoviesFrontend/movies_Client/src/Components/Carrito/Carrito.css
+++ b/MoviesFrontend/movies_Client/src/Components/Carrito/Carrito.css
@@ -6,6 +6,11 @@
         margin-bottom: 2.5em;
         font-size: 2.5em;
     }
+
+    p{
+        font-size: 1.12em;
+        color: #ffffff;
+    }
 }
 
 .cart-item {
