--- a/MoviesFrontend/movies_Client/src/views/adminPage.css
+++ b/MoviesFrontend/movies_Client/src/views/adminPage.css
@@ -1,3 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.adminPage{
+    padding: 4em;
+    margin-top: 2em;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 h1{
     text-align: center;
     margin-top: 20px;
@@ -8,7 +22,6 @@ p{
 }
 
 .adminPage{
-    
     .buttons{
         display: flex;
         justify-content: center;
