--- a/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
@@ -30,20 +30,19 @@
     width: 300px;
 }
 .contenedor-medio-textos{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     background-color: rgb(250, 242, 231);
     padding-bottom: 40px;
     padding-left: 20px;
-    text-align: left;
 }
 .contenedor-medio-textos h1{
-    font-size: 1.6em;
-    text-align: left;
+    margin-top: 20px;
 }
-
 .contenedor-medio-textos p{
     color: rgb(0, 0, 0);
     padding-bottom: 5px;
-    text-align: left;
 }
 
 
