--- a/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
@@ -1,5 +1,3 @@
-
-
 .movie-background {
     position: absolute;
     width: 100%;
@@ -11,6 +9,7 @@
     border: 1px solid #000000; /* Bordes negros para evitar resplandor de desenfoque */
 
 }
+
 .contenedor-general{
     padding: 200px;
     display: flex;
@@ -18,7 +17,6 @@
     flex-wrap: nowrap;
     justify-content: space-evenly;
 }
-
 
 .contenedor-medio{
     display: flex;
@@ -45,15 +43,13 @@
     padding-bottom: 5px;
 }
 
-
-
-
 .contenedor-chico{
     display: flex;
     flex-direction: column;
     width: 30%;
     height: 30%; 
 }
+
 .contenedor-chico p{
     background-color: rgba(0, 0, 0, 0.541);
     border-radius: 3%;
@@ -64,10 +60,9 @@
     text-align: left;
     padding: 70px;
 }
-.boton{
-    padding-top: 70px;
-}
-button {
+
+.carrito-btn{
+    margin-top: 5em;
     background-image: linear-gradient(to right, #ffffff00 0%, #6a6969 30%, #010556 100%);
     background-size: 500% 100%; /* Tamaño del fondo para que la animación funcione */
     background-position: left center; /* Posición inicial */
@@ -76,7 +71,6 @@ button {
     width: 200px;
     height: 45px;
     color: #000000; /* Color inicial del texto */
-            
     text-decoration: none;
     font-size: 1.15em;
     cursor: pointer;
@@ -85,11 +79,38 @@ button {
     position: relative; /* Asegura que el texto no se vea afectado por el fondo */
 }
 
-button:hover {
+.carrito-btn:hover {
     background-position: right center;
     color: #ffffff; /* Color del texto al hacer hover */
 }
 
-button:active {
+.carrito-btn:active {
+    transform: scale(0.95);
+}
+
+.eliminar-btn{
+    margin-top: 5em;
+    background-image: linear-gradient(to right, #daa2a2fa 0%, #a90000 30%, #871f28 100%);
+    background-size: 500% 100%; /* Tamaño del fondo para que la animación funcione */
+    background-position: left center; /* Posición inicial */
+    border: 0.17em transparent;
+    border-radius: 1.1em;
+    width: 200px;
+    height: 45px;
+    color: #000000; /* Color inicial del texto */
+    text-decoration: none;
+    font-size: 1.15em;
+    cursor: pointer;
+    transition: background-position 1s ease, color 1s ease; /* Aplica la transición al fondo y al color */
+    z-index: 1;
+    position: relative; /* Asegura que el texto no se vea afectado por el fondo */
+}
+
+.eliminar-btn:hover {
+    background-position: right center;
+    color: #ffffff; /* Color del texto al hacer hover */
+}
+
+.eliminar-btn:active {
     transform: scale(0.95);
 }
