--- a/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieDetail/detail.css
@@ -11,7 +11,7 @@
 }
 
 .contenedor-general{
-    padding: 200px;
+    padding: 165px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -24,23 +24,45 @@
     border: 1px solid black;
     box-shadow: 0px 7px 10px rgb(0, 0, 0);
 }
+
 .contenedor-medio img{
     width: 300px;
 }
+
 .contenedor-medio-textos{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     background-color: rgb(250, 242, 231);
-    padding-bottom: 40px;
+    padding-bottom: 30px;
     padding-left: 20px;
+
+    .precio-descontado{
+        color: rgb(1, 152, 1);
+        font-size: 0.85em;
+    }
+
+    .precio-tachado{
+        color:#3e3e3e;
+        font-size: 0.82em;
+    }
 }
+
 .contenedor-medio-textos h1{
-    margin-top: 20px;
+    margin-top: 12px;
 }
+
 .contenedor-medio-textos p{
     color: rgb(0, 0, 0);
-    padding-bottom: 5px;
+    padding-bottom: 0.1px;
+    margin-top: 0.85em;
+}
+
+.contenedor-medio-textos b{
+    color: rgb(0, 0, 0);
+    margin-top: 0.85em;
+    margin-bottom: 0.1em;
+    font-size: 1.25em;
 }
 
 .contenedor-chico{
@@ -62,17 +84,17 @@
 }
 
 .carrito-btn{
-    margin-top: 5em;
+    margin-top: 6em;
     background-image: linear-gradient(to right, #ffffff00 0%, #6a6969 30%, #010556 100%);
     background-size: 500% 100%; /* Tamaño del fondo para que la animación funcione */
     background-position: left center; /* Posición inicial */
     border: 0.17em transparent;
-    border-radius: 1.1em;
+    border-radius: 0.7em;
     width: 200px;
     height: 45px;
-    color: #000000; /* Color inicial del texto */
+    color: #ffffff; /* Color inicial del texto */
     text-decoration: none;
-    font-size: 1.15em;
+    font-size: 1em;
     cursor: pointer;
     transition: background-position 1s ease, color 1s ease; /* Aplica la transición al fondo y al color */
     z-index: 1;
@@ -81,7 +103,7 @@
 
 .carrito-btn:hover {
     background-position: right center;
-    color: #ffffff; /* Color del texto al hacer hover */
+    color: #939393; /* Color del texto al hacer hover */
 }
 
 .carrito-btn:active {
@@ -89,17 +111,17 @@
 }
 
 .eliminar-btn{
-    margin-top: 5em;
-    background-image: linear-gradient(to right, #daa2a2fa 0%, #a90000 30%, #871f28 100%);
+    margin-top: 6.5em;
+    background-image: linear-gradient(to right, #fc3636fa 0%, #f18686 30%, #9e000d 100%);
     background-size: 500% 100%; /* Tamaño del fondo para que la animación funcione */
     background-position: left center; /* Posición inicial */
     border: 0.17em transparent;
-    border-radius: 1.1em;
+    border-radius: 0.7em;
     width: 200px;
     height: 45px;
-    color: #000000; /* Color inicial del texto */
+    color: #ffffff; /* Color inicial del texto */
     text-decoration: none;
-    font-size: 1.15em;
+    font-size: 1em;
     cursor: pointer;
     transition: background-position 1s ease, color 1s ease; /* Aplica la transición al fondo y al color */
     z-index: 1;
@@ -108,7 +130,7 @@
 
 .eliminar-btn:hover {
     background-position: right center;
-    color: #ffffff; /* Color del texto al hacer hover */
+    color: #939393; /* Color del texto al hacer hover */
 }
 
 .eliminar-btn:active {
