--- a/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
+++ b/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
@@ -5,6 +5,7 @@
     margin-top: 100px;
     margin-bottom: 280px;
 }
+
 input {
     width: 50%;
     height: 30px;
@@ -12,4 +13,11 @@ input {
     border: 1px solid #ccc;
     padding: 5px;
     font-size: 16px;
+}
+
+.movie-results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
