--- a/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
+++ b/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     margin-top: 100px;
     margin-bottom: 280px;
 }
