visibilidad movies SIN STOCK siendo ADMIN y detalles

--- a/MoviesFrontend/movies_Client/src/components/MovieList/movie.css
+++ b/MoviesFrontend/movies_Client/src/components/MovieList/movie.css
@@ -66,6 +66,10 @@
     font-size: 1.2em;
   }
 
+  .sin-stock{
+    color: red
+  }
+
   .precio-tachado{
     color:#3e3e3e;
     font-size: 0.82em;
