--- a/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
+++ b/MoviesFrontend/movies_Client/src/components/SearchBar/searchBar.css
@@ -22,3 +22,9 @@ input {
     justify-content: center;
     gap: 20px;
 }
+
+.error {
+    color: rgb(255, 52, 52);
+    margin-top: 10px;
+    font-size: 1.05em;
+}
